# LogCat

./: .gitignore  INCLUDE.txt  README.md  build.gradle  contributors.txt  settings.gradle
LogCat/: AndroidManifest.xml  build.gradle  library.gradle
LogCat/src/com/malakhv/util/: LogCat.java
TestApp/: build.gradle
TestApp/src/main/: AndroidManifest.xml
TestApp/src/main/java/com/malakhv/libs/logcat/test/: MainActivity.java
TestApp/src/main/res/layout/: activity_main.xml
TestApp/src/main/res/values/: strings.xml
xLogLib/: AndroidManifest.xml  build.gradle  library.gradle
xLogLib/cpp/: CMakeLists.txt  logcat-native-lib.c
xLogLib/src/com/malakhv/util/: LogCat.java
